# NBACrawler

./: .gitignore  README.md  generate_covers.py  generate_demo_tweets.py  main.py  pyproject.toml  requirements.txt  run_demo.py
.claude/: settings.json
.github/: copilot-instructions.md
.github/agents/: admin.agent.md  developer.agent.md  product-manager.agent.md  tester.agent.md
browser/: __init__.py  fetcher.py  screenshot.py
cli/: app.py
config/: __init__.py  glossary.py  players.json  players.py  settings.py  sites.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md
models/: __init__.py  article.py  tweet.py
scraper/: __init__.py  base.py  nba_scraper.py  rss_scraper.py  twitter_scraper.py
storage/: __init__.py  base.py  json_storage.py  sqlite_storage.py
tests/: conftest.py  test_cli.py  test_integration.py  test_models.py  test_rate_limiter.py  test_scraper.py  test_storage.py  test_translator.py  test_twitter_scraper.py  test_web_app.py
tests/fixtures/: nba_news_list.html  nba_news_missing_fields.html  nitter_tweet.html  twitter_api_response.json
translator/: __init__.py  base.py  google_translator.py
utils/: __init__.py  claude_ai.py  exceptions.py  headers.py  http.py  mood.py  proxy.py  rate_limiter.py  robots.py
web/: app.py
web/static/: style.css
web/templates/: index.html
