[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basketball-news-scraper"
version = "0.1.0"
description = "篮球资讯爬虫 MVP — 抓取 NBA News 列表并翻译入库"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Basketball News Scraper Team"},
]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "Flask>=3.0",
    "deep-translator>=1.11",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["config*", "scraper*", "browser*", "translator*", "models*", "storage*", "utils*", "cli*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
